--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
 *{
   box-sizing: border-box;
 }
+body {
+  background: #F6F6F6;; /*Фоновый цвет*/
+  padding: 15px;
+  font-family: 'Inter', sans-serif;
+}
+.page-wrapper {
+  max-width: 389px;
+  margin: auto;
+  border-radius: 15px;
+  background: #F6F6F6;
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
+}
+.header {
+  color: #fff;
+  padding: 100px 44px;
+  border-radius: 15px 15px 60px 60px;
+  border-top: 1px solid #000;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.70) 0%, rgba(0, 0, 0, 0.70) 100%), url('/img/head.b-g.png') no-repeat bottom / cover;
+}
+.hello {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.hello-text {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
