--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,16 @@ body {
   font-family: 'Inter', sans-serif;
 }
 .page-wrapper {
+  overflow: hidden;
   max-width: 389px;
   margin: auto;
   border-radius: 15px;
   background: #F6F6F6;
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.25);
+}
+.container {
+  max-width: 300px;
+  margin: auto;
 }
 .header {
   color: #fff;
@@ -29,6 +34,36 @@ body {
 .hello-text {
   font-size: 14px;
   font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.user {
+  margin-top: -50px;
+  padding-bottom: 10px;
+  text-align: center;
+  border-radius: 15px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+
+}
+.user-avatar {
+  margin-top: -50px;;
+  object-fit: cover;
+  border-radius: 100px;
+  border: 3px solid #fff;
+}
+.user-name {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+}
+.user-description {
+  margin-top: 1px;
+  margin-bottom: 0;
+  color: #8A8989;
+  font-size: 14px;
   font-weight: 400;
   line-height: normal;
 }
