--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
   object-fit: cover;
   border-radius: 100px;
   border: 3px solid #fff;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 .user-name {
   margin-top: 0;
@@ -66,4 +67,53 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: normal;
+}
+.contacts {
+  border-radius: 15px;
+  background: #FFF;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+  margin-top: 13px;
+  margin-bottom: 13px;
+  padding: 20px;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  /* min-width: auto; */
+  margin: auto;
+  gap: 10px;
+}
+.button {
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  flex-shrink: 1;
+  width: 100%;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #fff;
+  gap: 10px;
+  margin-right: auto;
+}
+.telegram {
+  background: #08C;
+}
+.whatsapp {
+  background: #25D366;
+}
+.instagram {
+  background: #D62976;
+}
+.facebook {
+  background: #1877F2;
+}
+.twitter {
+  background: #17A9FD;
+}
+.github {
+  gap: 5px;
+  margin-bottom: 10px;
+  font-size: 12px;
 }
